--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Garage Door</string>
     <string name="action_settings">Settings</string>
+    <string name="distance">distance</string>
+    <string name="longitude">longitude</string>
+    <string name="latitude">latitude</string>
+    <string name="your_location">Your Location</string>
 </resources>
