--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Garage Door</string>
+    <string name="app_name">Mulloy Garage</string>
+    <string name="app_name_title">Mulloy Garage Opener</string>
     <string name="action_settings">Settings</string>
     <string name="distance">distance</string>
     <string name="longitude">longitude</string>
